--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/systememployee?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 0531264128
+spring.datasource.password =0531264128
 #Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #Hibernate auto ddl
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
+upload.path= /uploads/
